# Littleton

./: .gitignore  .gitmodules  AUTHORS  DarkFlowers.sln  DarkFlowers.vcxproj  Littleton.sln  Littleton.vcxproj  README.md  dfo.md  meson.build
data/shaders/: ambient.frag  apply_sg.frag  atmosphere.frag  atmosphere.vert  blend_texture.frag  blit_texture.frag  blur.frag  brdf.glsl  cast_ray.glsl  cast_ray.vert  constants.glsl  convolution.frag  cubemap.geom  deferred.glsl  deferred_input.glsl  deferred_output.glsl  depth.frag  depth.glsl  draw_texture.frag  empty.frag  forward.frag  forward_render.frag  fullscreen.vert  gamma.frag  generic.vert  generic_fragment_input.glsl  generic_geometry_input.glsl  generic_vertex_input.glsl  geometry.frag  kernel.frag  light_types.glsl  lighting.frag  lighting.vert  material.glsl  min_max_depth.frag  projection.glsl  sdf.frag  shadow.glsl  sky.frag  sky.vert  (+13 more)
data/shaders/sao/: ao_sample_pass.frag  blur.frag  z_pass.frag
data/shaders/sg/: apply.frag  copy.comp  lobe.comp  matrix_vector.comp  sg.glsl  solve.comp
data/shaders/shadow/: directional_msm.frag  directional_msm.glsl  directional_pcf.glsl  msm.frag  msm.glsl  omni_msm.frag  omni_msm.glsl  omni_pcf.frag  omni_pcf.glsl  pcf.glsl  perspective_msm.glsl  perspective_pcf.glsl  point_msm.frag  point_pcf.glsl
include/: camera.hh  context.hh  doublebuffer.hh  environment_map.hh  framebuffer.hh  light.hh  loaders.hh  loaner.hh  material.hh  math.hh  model.hh  object.hh  primitive.hh  resource.hh  resource_pool.hh  scene_graph.hh  shader.hh  shader_pool.hh  shadow_map.hh  stencil_handler.hh  transformable.hh  window.hh
include/littleton/: about.hh  animated.hh  api.hh  camera.hh  common_resources.hh  context.hh  doublebuffer.hh  environment_map.hh  font.hh  framebuffer.hh  framebuffer_pool.hh  gbuffer.hh  glheaders.hh  gpu_buffer.hh  gpu_buffer.tcc  light.hh  littleton.hh  loaders.hh  loaner.hh  loaner.tcc  material.hh  math.hh  math.tcc  model.hh  multishader.hh  object.hh  pipeline.hh  pipeline.tcc  primitive.hh  render_target.hh  resource.hh  resource_pool.hh  resource_pool.tcc  sampler.hh  scene.hh  scene.tcc  scene_graph.hh  sdf.hh  shader.hh  shader.tcc  (+14 more)
include/littleton/method/: apply_sg.hh  atmosphere.hh  blit_framebuffer.hh  bloom.hh  clear.hh  clear_gbuffer.hh  draw_sdf.hh  draw_texture.hh  forward_pass.hh  fullscreen_effect.hh  gamma.hh  generate_depth_mipmap.hh  generate_sg.hh  geometry_pass.hh  kernel.hh  lighting_pass.hh  render_2d.hh  sao.hh  sdf.hh  shadow_method.hh  shadow_msm.hh  shadow_pcf.hh  sky.hh  skybox.hh  ssao.hh  ssrt.hh  tonemap.hh  visualize_cubemap.hh  visualize_gbuffer.hh
include/method/: blit_framebuffer.hh  bloom.hh  clear.hh  clear_gbuffer.hh  draw_texture.hh  forward_pass.hh  fullscreen_effect.hh  gamma.hh  geometry_pass.hh  kernel.hh  lighting_pass.hh  sao.hh  shadow_method.hh  shadow_msm.hh  shadow_pcf.hh  sky.hh  skybox.hh  ssao.hh  ssrt.hh  tonemap.hh  visualize_gbuffer.hh
lib/: tiny_gltf.cc
src/: animated.cc  buffer.cc  buffer.hh  camera.cc  camera.hh  color.hh  common_resources.cc  common_resources.hh  context.cc  context.hh  doublebuffer.cc  doublebuffer.hh  environment_map.cc  environment_map.hh  font.cc  framebuffer.cc  framebuffer.hh  framebuffer_pool.cc  framebuffer_pool.hh  gbuffer.cc  gbuffer.hh  glheaders.hh  gpu_buffer.cc  gpu_buffer.hh  helpers.cc  helpers.hh  helpers.tcc  light.cc  light.hh  loaders.cc  loaders.hh  loaner.hh  loaner.tcc  main.cc  material.cc  material.hh  math.cc  math.hh  mesh.cc  mesh.hh  (+58 more)
src/method/: apply_sg.cc  atmosphere.cc  blit_framebuffer.cc  blit_framebuffer.hh  bloom.cc  bloom.hh  clear.cc  clear.hh  clear_gbuffer.cc  clear_gbuffer.hh  draw_sdf.cc  draw_texture.cc  draw_texture.hh  forward_pass.cc  forward_pass.hh  forward_render.cc  forward_render.hh  fullscreen_effect.cc  fullscreen_effect.hh  gamma.cc  gamma.hh  generate_depth_mipmap.cc  generate_sg.cc  geometry_pass.cc  geometry_pass.hh  kernel.cc  kernel.hh  lighting_pass.cc  lighting_pass.hh  render_2d.cc  render_shadow_maps.cc  render_shadow_maps.hh  sao.cc  sao.hh  sdf.cc  shadow_method.cc  shadow_method.hh  shadow_msm.cc  shadow_msm.hh  shadow_pcf.cc  (+14 more)
src/shadow/: directional_msm.cc  directional_msm.hh  directional_pcf.cc  directional_pcf.hh  directional_shadow_map_pcf.cc  directional_shadow_map_pcf.hh  msm.cc  msm.hh  pcf.cc  pcf.hh  shadow_map.cc  shadow_map.hh  shadow_scene.cc  shadow_scene.hh
